# cosmicrafts-dao

./: .gitignore  Cargo.toml  Makefile  README.md  backend.did  backup.yaml  canister_ids.json  defaultidentity.py  deposit_cycles.sh  dfx.json  entities.json  fixed_identity.pem  galaxy.did  game_optimized.wasm.br  ic-icrc1-index-ng.wasm  ic-icrc1-index.wasm  identity.pem  init.sh  ledger-canister.wasm.gzZone.Identifier  ledger.did.txtZone.Identifier  message.json  mops.toml  msg.json  package-lock.json  package.json  participant_accounts.txt  register.sh  sns_canister_ids.json  sns_init.yaml  sns_participation.sh  test.sh  test_identity.pem  tsconfig.json
scripts/: roadmap.py
src/backend/: Types.mo  Utils.mo  main.mo  roadmap.mo  rodmap.mo
src/cosmicrafts_dao_frontend/: package.json
src/cosmicrafts_dao_frontend/src/: App.vue
src/database/: main.mo
src/frontend/: entities.json  index.html  package.json  tsconfig.json  vite.config.js
src/frontend/public/Cosmicrafts/: Cosmicrafts.data.br  Cosmicrafts.framework.js.br  Cosmicrafts.loader.js
src/frontend/src/: App.vue  main.js  router.js  style.css
src/frontend/src/assets/: cinematic.json  game.js  lore1.json
src/frontend/src/components/: AccountRecovery.vue  AllianceManager.vue  CarouselSection.vue  Chat.vue  DialogueBox.vue  DialogueBox_backup.vue  EmojiPicker.vue  Entity.vue  EntityPanel.vue  Footer.vue  Fps.vue  GalaxyMap.vue  GameTooltip.vue  Header.vue  HeroSection.vue  LanguageSelector.vue  LoadingScreen.vue  Login.vue  MetaverseMap.vue  MobileMenu.vue  Modal.vue  PlayerAvatar.vue  Registration.vue  ResetCameraButton.vue  Starfield.vue
src/frontend/src/locales/: ar.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json  tr.json  vi.json  zh.json
src/frontend/src/pages/: DAO.vue  Dashboard.vue  Error.vue  Game.vue  Profile.vue  Roadmap.vue  entities.json
src/galaxy/: Cargo.toml  main.mo
src/galaxy/src/: lib.rs  types.rs
src/game/: Cargo.toml  main.rs
src/game/assets/: 1.ron  MegaParticleAccelerator.ron  backup1.ron  basic star.ron  sparse.ron
src/icp-transfer/: package-lock.json  package.json  send_icp.js
(+38 files in other folders)
