[package]
name = "galaxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.16"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.10"
candid = "0.10"

serde = "1.0"
serde_json = "1.0.136"

getrandom = { version = "0.2", features = ["js"] }

rstar = "0.12.2"
ulid = "1.1.4"

