[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.16"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.10"
candid = { version = "0.10", features = ["value"] }

serde = "1.0"
getrandom = { version = "0.2", features = ["js"] }

rstar = "0.12.2"