[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "game"
path = "main.rs"

[[bin]]
name = "game"
path = "main.rs"

[dependencies]
bevy = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
wasm-bindgen = "0.2"
bevy_pancam = "0.17.0"